tests/golden/type_errors/index_compound_non_number_element.cd
let xs: [string] = ["a"];
xs[0] += 1;
